--- a/front-end/css/reset.css
+++ b/front-end/css/reset.css
@@ -60,3 +60,15 @@
 .link-simples:hover{
     text-decoration: underline #F0B90B;
 }
+
+.atencao{
+    color: #F0B90B;
+}
+
+.copy{
+    font-family: "Kantumruy Pro", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    font-size: 16px;
+    color: #eee;
+}
