--- a/front-end/css/reset.css
+++ b/front-end/css/reset.css
@@ -15,6 +15,12 @@
 
 .centro{
     display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.centro-login{
+    display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
@@ -71,4 +77,13 @@
     font-style: normal;
     font-size: 16px;
     color: #eee;
+}
+
+.link-none{
+    text-decoration: none;
+    color: #eee;
+}
+
+::selection{
+    background-color: #333;
 }
