Depósito e histórico finalizados
O depósito e o histórico foram finalizados com sucesso, porém no front-end o histórico fica colado com o footer quando temos muitas transações feitas

--- a/front-end/css/cards/card-popular.css
+++ b/front-end/css/cards/card-popular.css
@@ -20,7 +20,7 @@
     flex-direction: column;
     padding: 10px;
     width: 720px;
-    height: 500px;
+    min-height: 500px;
 }
 
 .tabela-titulo{
