--- a/front-end/css/usuario.css
+++ b/front-end/css/usuario.css
@@ -1,15 +1,3 @@
-.icon-user{
-    color: #474D57;
-    height: 45px;
-    width: 45px;
-    margin: 0px 15px;
-    transition: .5s;
-}
-
-.icon-user:hover{
-    color: #f0b90f;
-}
-
 /* base */
 
 .container-main{
@@ -46,7 +34,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    height: 475px;
+    min-height: 475px;
     width: 450px;
     border-radius: 10px;
     border: 3px #474D57 solid;
@@ -88,7 +76,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    min-height: 275px;
+    min-height: 500px;
     min-width: 750px;
     border: 3px #474D57 solid;
     border-radius: 10px;
@@ -186,6 +174,20 @@
     text-shadow: 0px 0px 15px #f0b90f;
     font-size: 20.5px;
 }
+
+.sheet-icon {
+    display: inline-block;
+    width: 45px;
+    height: 45px;
+    --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23000' d='M4 12v6V6zm10 9q.425 0 .713-.288T15 20t-.288-.712T14 19t-.712.288T13 20t.288.713T14 21m6-10q.425 0 .713-.288T21 10t-.288-.712T20 9t-.712.288T19 10t.288.713T20 11M6 11h5V9H6zm0 4h5v-2H6zm-2 5q-.825 0-1.412-.587T2 18V6q0-.825.588-1.412T4 4h16q.825 0 1.413.588T22 6H4v12h5v2zm10 3q-1.25 0-2.125-.875T11 20q0-.975.563-1.75T13 17.175V14h6v-1.175q-.875-.3-1.437-1.075T17 10q0-1.25.875-2.125T20 7t2.125.875T23 10q0 .975-.562 1.75T21 12.825V16h-6v1.175q.875.3 1.438 1.075T17 20q0 1.25-.875 2.125T14 23'/%3E%3C/svg%3E");
+    background-color: currentColor;
+    -webkit-mask-image: var(--svg);
+    mask-image: var(--svg);
+    -webkit-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    -webkit-mask-size: 100% 100%;
+    mask-size: 100% 100%;
+  }
 
 /* verificar */
 
