--- a/front-end/css/historico.css
+++ b/front-end/css/historico.css
@@ -1,6 +1,6 @@
 table{
     width: 100%;
-    height: 100%;
+    height: 50rem;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -8,7 +8,29 @@ table{
     border-radius: 10px;
     box-shadow: 0px 0px 15px #F0B90B;
     border-collapse:separate;
+    
+
+
+    margin-bottom: 50px;
 }
+
+tbody{
+    overflow-y:scroll;
+}
+
+tbody::-webkit-scrollbar {
+    width: 20px; 
+    background-color: #16161a; 
+    
+}
+
+
+tbody::-webkit-scrollbar-thumb {
+    background-color: #4e4e4ea2; 
+    
+    
+}
+
 
 .tb-linha, .tb-linha-titulo{
     display: flex;
